--- a/index.css
+++ b/index.css
@@ -1,7 +1,10 @@
 #main div { 
-    /* display: flex;
-    justify-content: center; /* 横方向の中央揃え */
     text-align: center;
+}
+
+.center {
+    display: flex;
+    justify-content: center; /* 横方向の中央揃え */
 }
 
 #zenkai-kara {
