--- a/index.css
+++ b/index.css
@@ -58,6 +58,10 @@ body {
     padding: 2px 15px;
 }
 
+#history table tr.daysep td {
+    border-top: 1px dashed #555;
+}
+
 #daylog-page {
     display: none;
 }
